name:                machines-play
version:             0.1.0.0
synopsis:            Playing with Haskell Machines
-- description:         
homepage:            https://github.com/alanz/machines-play
license:             BSD3
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

executable machines-play
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base
                     , machines
                     , machines-io
                     , transformers
                     , containers
                     , conduit
                     , conduit-extra
                     , concurrent-machines 

executable machines-example
  main-is:           Example.hs
  build-depends:       base
                     , machines
                     , machines-io
                     , text
                     , transformers
                     , containers
                     , concurrent-machines