name:                machines-play
version:             0.1.0.0
synopsis:            Playing with Haskell Machines
-- description:         
homepage:            https://github.com/alanz/machines-play
license:             BSD3
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

executable original-example
  main-is:             OriginalExample.hs
  -- other-modules:       
  build-depends:       base
                     , machines
                     , machines-io
                     , transformers
                     , containers
                     , conduit
                     , conduit-extra

executable traffic-report
  main-is:             TrafficReport.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , machines
                     , machines-io
                     , concurrent-machines
                     , text
                     , transformers
                     , containers
                     , pretty-show
                     , lifted-base
