name:                zurihac-machines
version:             0.1.0.0
synopsis:            Playing with Haskell Machines
-- description:         
homepage:            
license:             BSD3
license-file:        LICENSE
author:              
maintainer:          
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

executable original-example
  main-is:             OriginalExample.hs
  -- other-modules:       
  build-depends:       base
                     , machines
                     , machines-io
                     , transformers
                     , containers
                     , conduit
                     , conduit-extra

executable traffic-report
  main-is:             TrafficReport.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , machines
                     , machines-io
                     , concurrent-machines
                     , text
                     , transformers
                     , containers
                     , pretty-show
                     , lifted-base

executable traffic-report-streams
  main-is:             TrafficReportStreams.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , streaming
                     , streaming-commons
                     , text
                     , transformers
                     , containers
                     , pretty-show
                     , async
                     , stm
                     , lifted-base

executable traffic-sketch
  main-is:             TrafficSketch.hs
  build-depends:       base
                     , machines
                     , machines-io
                     , text
                     , transformers
                     , containers
                     , pretty-show
                     , async
                     , stm
                     , lifted-base

executable traffic-paolino
  main-is:             TrafficPaolino.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , machines
                     , text
                     , transformers
                     , containers
                     , stm
                     , lens
                     , pointed
                     , pretty-show

